--- a/icmake/changelog
+++ b/icmake/changelog
@@ -1,3 +1,18 @@
+icmake (7.23.00)
+
+  * Updated CXXFLAGS in generated icmconf files to contain --std=c++14
+
+  * Added the define
+        //#define PRECOMP "-x c++-header"
+    to icmconf files. When activated, internal header files are precompiled 
+    when they are more recent than their precompiled versions.
+
+  * Added the define
+        #define IH ".ih"
+    to icmconf files, specifying the extension of internal header files. It is
+    used by PRECOMP. 
+
+
 icmake (7.22.01)
 
   * The `ar' program in binutils >= 2.25.7 generates a warning when the u
