--- a/icmake/doc/icmake.1
+++ b/icmake/doc/icmake.1
@@ -1,4 +1,4 @@
-.TH "icmake" "1" "1992\-2015" "icmake\&.7\&.22\&.01\&.tar\&.gz" "A program maintenance utility"
+.TH "icmake" "1" "1992\-2015" "icmake\&.7\&.23\&.00\&.tar\&.gz" "A program maintenance utility"
 
 .PP 
 .SH "NAME"
@@ -735,6 +735,8 @@ may be read and processed as follows:
         }
             
 .fi 
+Note that the function \fIfgets\fP cannot read files beyond offset
+65536\&.
 
 .PP 
 Output interface:
