--- a/icmake/changelog
+++ b/icmake/changelog
@@ -1,4 +1,11 @@
+icmake (8.00.00)
+
   * Added trim, trimleft, trimright, length, get_dext
+
+  * This release adds several new builtin functions, which required a
+    redefinition of the builtin function codes. Because of this existing bim
+    files should be recompiled from their .im source files
+
 
 icmake (7.23.02)
 
