WIP. Renamed the parser/inc files; prepared the grammar for     unrestricted definitions of variables, also in for-stmnt     initialization sections. Creating a function frame     is now handled by parser/closefun.c.     Next chore: completing the implementation of the symbol table     (comp/symtab)

--- a/icmake/comp/parser/inc/openbrace.5
+++ b/icmake/comp/parser/inc/openbrace.5
@@ -3,5 +3,8 @@ openbrace:
         gp_parse_error = err_openbrace_expected;
     }    
     '{'                             /* } (for matching) */
+    {
+        symtabPush();
+    }
 ;
 
