--- a/icmake/comp/parser/inc/forstat.5
+++ b/icmake/comp/parser/inc/forstat.5
@@ -1,6 +1,9 @@
 _for:
     FOR
     nesting
+    {
+        symtabPush();
+    }
 ;
 
 _expr_list:
@@ -10,6 +13,8 @@ _expr_list:
     {
         $$ = *catcode(&$1, &$3);
     }
+|
+    varlist
 |
     expr_code
 ;
@@ -45,3 +50,11 @@ for_stat:
         $$ = *for_stmnt(&$3, &$5, &$7, &$10);
     }
 ;
+
+
+
+
+
+
+
+
