wip, compiling icm-comp

--- a/icmake/comp/parser/inc/openbrace.5
+++ b/icmake/comp/parser/inc/openbrace.5
@@ -4,7 +4,7 @@ openbrace:
     }    
     '{'                             /* } (for matching) */
     {
-        symtabPush();
+        symtab_push();
     }
 ;
 
