--- a/icmake/comp/parser/inc/closebrace.5
+++ b/icmake/comp/parser/inc/closebrace.5
@@ -1,6 +1,7 @@
 closebrace: 
     {
         gp_parse_error = err_closebrace_expected;
+        symtab_pop();
     }                       /* '{' for matching */
     '}' 
 ;
