--- a/icmake/comp/parser/inc/funcdef.5
+++ b/icmake/comp/parser/inc/funcdef.5
@@ -9,7 +9,7 @@ _partype:
     type_of_var
     enterid
     {
-        ++gp_nParams;       /* should be SF as symtab keeps track of this */
+        symtab_newParam();
     }
 ;
 
