wip testing new code: function start addresses incorrrect

--- a/icmake/comp/parser/inc/zeroframe.5
+++ b/icmake/comp/parser/inc/zeroframe.5
@@ -1,5 +1,5 @@
 zeroframe:
     {
-        $$ = *stackframe(0);
+        $$ = *stackframe(0);   /* by default initializes a variable to 0 */
     }
 ;
