WIP: parameters, local and global variables are recognized      added msg_ to rss, #define msg to use it, see rss/rss.h

--- a/icmake/comp/parser/inc/enterid.5
+++ b/icmake/comp/parser/inc/enterid.5
@@ -1,6 +1,7 @@
 enterid:
     IDENTIFIER
     {
-        defineVar();
+        defineVar();    /* the first n variables of a function, up to the
+                            end of the parameter list are the parameters. */
     }
 ;
