WIP cleanup rss files

--- a/icmake/doc/icmake.1
+++ b/icmake/doc/icmake.1
@@ -588,10 +588,10 @@ Filename modifiers:
 Changes the basename of \fIfile\fP, returns the changed name\&. E\&.g, 
 \fIchange_base(\(dq\&/path/demo\&.im\(dq\&, \(dq\&out\(dq\&)\fP returns \fI\(dq\&/path/out\&.im\(dq\&\fP;
 .IP o 
-\fIstring change_ext(string file, string newext)\fP
+\fIstring rss_changeExt(string file, string newext)\fP
 .br 
 Changes the extension of \fIfile\fP, returns the changed name\&. E\&.g, 
-\fIchange_ext(\(dq\&source\&.cc\(dq\&, \(dq\&o\(dq\&)\fP returns \fI\(dq\&source\&.o\(dq\&\fP;
+\fIrss_changeExt(\(dq\&source\&.cc\(dq\&, \(dq\&o\(dq\&)\fP returns \fI\(dq\&source\&.o\(dq\&\fP;
 .IP o 
 \fIstring change_path(string file, string newpath)\fP
 .br 
