--- a/icmake/comp/parser/inc/vardefs.5
+++ b/icmake/comp/parser/inc/vardefs.5
@@ -17,8 +17,8 @@ _idexpr:
     }        
 ;
 
-_varnames:
-    _varnames
+vardefs:
+    vardefs
     comma
     _idexpr
     {
@@ -33,12 +33,5 @@ _varnames:
     zeroframe                       /* Empty stmnt  */
     {
         $$ = $3;
-    }
-;
-
-vardefs:
-    _varnames
-    {
-        $$ = $1;                    /* initialization code */
     }
 ;
