--- a/icmake/comp/parser/inc/varorfun.5
+++ b/icmake/comp/parser/inc/varorfun.5
@@ -1,9 +1,8 @@
 var_or_fun:
-        vardefs
-        semicol
-        {
-            gp_init = *catcode(&gp_init, &$1);
-        }
-    |
-        funcdef
-    ;
+    varlist
+    {
+        gp_init = *catcode(&gp_init, &$1);
+    }
+|
+    funcdef
+;
