WIP allowing for-stmnt to define variables

--- a/icmake/comp/parser/inc/varlist.5
+++ b/icmake/comp/parser/inc/varlist.5
@@ -1,8 +1,12 @@
-varlist:
+embedded_varlist:
     type_of_var
     vardefs
-    semicol
     {
         $$ = $2;
     }
+;
+
+varlist:
+    embedded_varlist
+    semicol
 ;
