--- a/icmake/comp/parser/inc/forstat.5
+++ b/icmake/comp/parser/inc/forstat.5
@@ -14,18 +14,19 @@ _expr_list:
         $$ = *catcode(&$1, &$3);
     }
 |
-    varlist
-|
     expr_code
 ;
 
-_opt_expr_list:
+_opt_init_expression:
     _expr_list
+|
+    embedded_varlist
 |
     zeroframe
 ;
 
-_opt_expression:
+
+_opt_cond_expression:
     err_expression
 |
     {
@@ -34,17 +35,23 @@ _opt_expression:
     }
 ;
 
+_opt_inc_expression:
+    _expr_list
+|
+    zeroframe
+;
+
 for_stat:
     _for
     openpar
-    _opt_expr_list      /* $3: init */
+    _opt_init_expression    /* $3: init */
     semicol
-    _opt_expression     /* $5: cond */
+    _opt_cond_expression    /* $5: cond */
     semicol
-    _opt_expr_list      /* $7 inc   */
+    _opt_inc_expression     /* $7 inc   */
     closepar
     break_ok
-    statement           /* $10 stmnt    */
+    statement               /* $10 stmnt    */
     popdead
     {
         $$ = *for_stmnt(&$3, &$5, &$7, &$10);
