ifstat.5 pushes and pops a symbol table

--- a/icmake/comp/parser/inc/ifstat.5
+++ b/icmake/comp/parser/inc/ifstat.5
@@ -1,6 +1,9 @@
 _if:
     IF
     nesting
+    {
+        symtab_push();
+    }
 ;
 
 _else:
@@ -25,6 +28,13 @@ if_stat:
     popdead
     {
         $$ = *if_stmnt(&$3, &$5, &$8);
+        symtab_pop();
     }
 ;
+
+
+
+
+
+
 
