extended the grammar with embedded_expression, used by if/while stmnt

--- a/icmake/comp/parser/inc/whilestat.5
+++ b/icmake/comp/parser/inc/whilestat.5
@@ -6,7 +6,7 @@ _while:
 while_stat:
     _while
     openpar
-    err_expression
+    embedded_expression
     closepar
     break_ok
     statement
