--- a/icmake/comp/parser/inc/vardefs.5
+++ b/icmake/comp/parser/inc/vardefs.5
@@ -5,28 +5,16 @@ _entervarid:
     }
 ;
 
-_idexpr:
-    enterid
-    zeroframe                           /* no explicit initialization */
-|
-    _entervarid
-    '='
-    expression
-    {
-        $$ = *expr_stmnt(assign(&$1, &$3));    /* explicit initialization */
-    }        
-;
-
 vardefs:
     vardefs
     comma
-    _idexpr
+    vardef
     {
         $$ = *catcode(&$1, &$3);    /* catenate variable    */
                                     /* initialization code  */
     }            
 |
-    _idexpr
+    vardef
 |
     error
     ok
@@ -35,3 +23,4 @@ vardefs:
         $$ = $3;
     }
 ;
+
