added 'condition' to parser/inc/ifstmnt.5 and parser/inc/whilestmnt.5

--- a/icmake/comp/parser/inc/varexpr.5
+++ b/icmake/comp/parser/inc/varexpr.5
@@ -1,8 +1,8 @@
-vardef:
+var_expr:
     enterid
     zeroframe                           /* no explicit initialization */
 |
-    _entervarid
+    enter_varid
     '='
     expression
     {
