--- a/icmake/comp/parser/inc/defvarorfun.5
+++ b/icmake/comp/parser/inc/defvarorfun.5
@@ -6,8 +6,14 @@ _voidtype:
 ;
 
 def_var_or_fun:
-    type_of_var         /* varType  */
-    var_or_fun
+    typed_varlist
+    semicol
+    {
+        gp_init = *catcode(&gp_init, &$1);
+    }
+|
+    type_of_var
+    funcdef
 |
     _voidtype
     funcdef
